# chat-with-pdf

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: eval_questions.json  eval_questions_dgao.json  eval_questions_falcao.json  eval_results.md  eval_results_dgao.md  eval_results_dgao_voyage.md  eval_results_falcao.md  eval_results_falcao_voyage.md  eval_results_voyage.md  retriever_experiments.md  retriever_experiments_dgao.md  retriever_experiments_falcao.md
scripts/: run_evaluation.py  run_retriever_experiments.py
src/: chunking.py  embeddings.py  evaluation.py  observability.py  pdf_loader.py  rag_chain.py  reranker.py  vector_store.py
tests/: conftest.py  test_app_e2e.py  test_chunking.py  test_embeddings.py  test_evaluation.py  test_observability.py  test_reranker.py  test_vector_store.py
